[gd_scene load_steps=6 format=3 uid="uid://bbgctkityx105"]

[ext_resource type="Script" path="res://scripts/battle_field/battle_field_cell.gd" id="1_epcym"]

[sub_resource type="Animation" id="Animation_bvrqq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.392157)]
}

[sub_resource type="Animation" id="Animation_cyuq1"]
resource_name = "mouse_enter"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0.392157), Color(0.485703, 0.485704, 0.485703, 0.392157)]
}

[sub_resource type="Animation" id="Animation_xdx7v"]
resource_name = "mouse_exit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.485703, 0.485704, 0.485703, 0.392157), Color(0, 0, 0, 0.392157)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ue5e4"]
_data = {
"RESET": SubResource("Animation_bvrqq"),
"mouse_enter": SubResource("Animation_cyuq1"),
"mouse_exit": SubResource("Animation_xdx7v")
}

[node name="TextureRect1" type="ColorRect"]
modulate = Color(0, 0, 0, 0.392157)
custom_minimum_size = Vector2(105, 110)
script = ExtResource("1_epcym")

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ue5e4")
}

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="animation_finished" from="Anim" to="." method="_on_anim_animation_finished"]
